ajout hero bis lumieres 1
trop petit

--- a/index-original.html
+++ b/index-original.html
@@ -764,6 +764,50 @@
         </div>
     </section>
 
+    <!-- HERO BIS - Lumières d'Israël -->
+    <section id="lumieres-israel" class="hero-bis hero-bis-lumieres">
+        <div class="hero-bis-content">
+            <div class="hero-bis-box">
+                <img src="images/mockup_boite_serie1_recto.png" alt="Boîte Lumières d'Israël">
+            </div>
+            <div class="hero-bis-text">
+                <h2>Lumières d'Israël</h2>
+                <p class="hero-bis-subtitle">— Les grandes figures de l'histoire juive</p>
+                <p class="hero-bis-description">Découvrez les patriarches, prophètes et sages qui ont façonné 4000 ans d'histoire</p>
+                <div class="hero-bis-buttons">
+                    <button class="btn-hero" onclick="openModal('modal-contenu-lumieres')">📖 Découvrir le contenu</button>
+                    <button class="btn-hero" onclick="openModal('modal-collection')">📚 La collection complète</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- MODALE : Collection complète -->
+    <div id="modal-collection" class="modal">
+        <div class="modal-content">
+            <span class="modal-close" onclick="closeModal('modal-collection')">&times;</span>
+            <h3>🚧 Collection en préparation</h3>
+            <p>Nous travaillons pour vous offrir une collection complète de 4 jeux retraçant 4000 ans d'histoire juive :</p>
+            <ul>
+                <li><strong>Jeu 1 — Torah Écrite</strong> : Les Patriarches et les Prophètes (disponible)</li>
+                <li><strong>Jeu 2 — Torah Orale</strong> : Les Sages de la Mishna et du Talmud (à venir)</li>
+                <li><strong>Jeu 3 — Commentateurs</strong> : Rachi, Maïmonide, Ramban... (à venir)</li>
+                <li><strong>Jeu 4 — Mystique & Renouveau</strong> : Kabbale et Hassidisme (à venir)</li>
+            </ul>
+            <p><em>Inscrivez-vous à notre newsletter pour être informé des prochaines sorties !</em></p>
+        </div>
+    </div>
+
+    <!-- MODALE : Contenu du jeu -->
+    <div id="modal-contenu-lumieres" class="modal">
+        <div class="modal-content modal-large">
+            <span class="modal-close" onclick="closeModal('modal-contenu-lumieres')">&times;</span>
+            <h3>📖 Contenu du Jeu 1 — Torah Écrite</h3>
+            <p>37 cartes présentant les grandes figures bibliques</p>
+            <p><em>Détails à venir...</em></p>
+        </div>
+    </div>
+
     <!-- ACTE 4: HERO BIS - Minhag ou Halakha -->
     <section id="hero-bis-moh" class="hero-bis moh-hero">
         <div class="hero-bis-background">
