--- a/index-original.html
+++ b/index-original.html
@@ -1147,9 +1147,9 @@
             <div class="hero-bis-lumieres-text">
                 <h2>Lumières d'Israël <span class="h2-subtitle">— Les grandes figures de l'histoire juive</span></h2>
                 <p class="hero-bis-subtitle">Découvrez les patriarches, prophètes et sages qui ont façonné 4000 ans d'histoire</p>
-                <div class="hero-bis-actions">
-                    <button class="btn-modal btn-hero" onclick="openModal('modal-contenu-lumieres')">Découvrir le contenu</button>
-                    <button class="btn-modal btn-hero" onclick="openModal('modal-collection')">La collection complète</button>
+                <div class="hero-bis-actions" style="display: flex; flex-direction: row; gap: 15px; align-items: center;">
+                    <button class="btn-modal btn-hero" style="width: auto;" onclick="openModal('modal-contenu-lumieres')">Découvrir le contenu</button>
+                    <button class="btn-modal btn-hero" style="width: auto;" onclick="openModal('modal-collection')">La collection complète</button>
                 </div>
             </div>
         </div>
