correction boutons decouvrir le contenu qui renvoyaient au pop up jeux en production

--- a/index-original.html
+++ b/index-original.html
@@ -571,7 +571,7 @@
                 <a href="animations/jdc/plateau-jdc.html" class="btn-modal" style="text-decoration: none;" target="_blank">
                     🎮 Essayer la démo
                 </a>
-                <button class="btn-modal btn-store" data-modal="content-discovery-jdc">
+                <button class="btn-modal" data-action="content" data-modal="content-discovery-jdc">
                     📦 Découvrir le contenu
                 </button>
                 <button class="btn-modal" data-action="rules" data-game="jdc">
@@ -950,7 +950,7 @@
                 <button class="btn-modal" data-action="demo">
                     🎮 Essayer la démo
                 </button>
-                <button class="btn-modal btn-store" data-modal="content-discovery-moh">
+                <button class="btn-modal" data-action="content" data-modal="content-discovery-moh">
                     📦 Découvrir le contenu
                 </button>
                 <button class="btn-modal" data-action="rules" data-game="moh">
@@ -1124,7 +1124,7 @@
                 <button class="btn-modal" data-action="demo">
                     🎮 Essayer la démo
                 </button>
-                <button class="btn-modal btn-store" data-modal="content-discovery-poz">
+                <button class="btn-modal" data-action="content" data-modal="content-discovery-poz">
                     📦 Découvrir le contenu
                 </button>
                 <button class="btn-modal" data-action="rules" data-game="poz">
