--- a/index-original.html
+++ b/index-original.html
@@ -1283,23 +1283,18 @@
     <!-- HERO BIS - Lumières d'Israël -->
     <section id="lumieres-israel" class="hero-bis hero-bis-lumieres">
         <div class="hero-bis-background">
-            <img src="images/hero_lumieres.jpg" alt="Lumières d'Israël - Les grandes figures de l'histoire juive" loading="lazy">
+            <img src="images/hero_lumieres_mod.jpg" alt="Lumières d'Israël - Les grandes figures de l'histoire juive" loading="lazy">
         </div>
-        <div class="hero-bis-content hero-bis-lumieres-content">
-            <div class="hero-bis-lumieres-box">
-                <img src="images/mockup_boite_serie1_recto.png" alt="Boîte Lumières d'Israël" loading="lazy">
-            </div>
-            <div class="hero-bis-lumieres-text">
-                <h2>Lumières d'Israël <span class="h2-subtitle">— Les grandes figures de l'histoire juive</span></h2>
-                <p class="hero-bis-subtitle">Découvrez les patriarches, prophètes et sages qui ont façonné 4000 ans d'histoire</p>
-                <div class="hero-bis-actions">
-                    <button class="btn-modal btn-hero" onclick="openModal('modal-contenu-lumieres')">Découvrir le contenu</button>
-                    <button class="btn-modal btn-hero" onclick="openModal('modal-collection')">La collection complète</button>
-                    <button class="btn-hero btn-modal" onclick="openModal('modal-carte-apercu')">Voir une carte</button>
-                    <button class="btn-modal btn-store" data-action="store">
-                        🛒 Commander
-                    </button>
-                </div>
+        <div class="hero-bis-content">
+            <h2>Lumières d'Israël <span class="h2-subtitle">— Les grandes figures de l'histoire juive</span></h2>
+            <p class="hero-bis-subtitle">Découvrez les patriarches, prophètes et sages qui ont façonné 4000 ans d'histoire</p>
+            <div class="hero-bis-actions">
+                <button class="btn-modal btn-hero" onclick="openModal('modal-contenu-lumieres')">Découvrir le contenu</button>
+                <button class="btn-modal btn-hero" onclick="openModal('modal-collection')">La collection complète</button>
+                <button class="btn-hero btn-modal" onclick="openModal('modal-carte-apercu')">Voir une carte</button>
+                <button class="btn-modal btn-store" data-action="store">
+                    🛒 Commander
+                </button>
             </div>
         </div>
     </section>
