bouton glossaire de telechargement flottant

--- a/glossaire.html
+++ b/glossaire.html
@@ -328,6 +328,20 @@
     document.getElementById('copyright-year').textContent = new Date().getFullYear();
     </script>
 
+    <!-- BOUTON FLOTTANT TÉLÉCHARGEMENT PDF -->
+    <a href="glossaire_hebreu_v2.pdf" 
+       download="Glossaire-Hebreu-Ora-Shel-Torah.pdf" 
+       class="floating-download-btn"
+       title="Télécharger le glossaire PDF">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
+            <polyline points="14 2 14 8 20 8"></polyline>
+            <line x1="12" y1="18" x2="12" y2="12"></line>
+            <polyline points="9 15 12 18 15 15"></polyline>
+        </svg>
+        <span class="floating-btn-text">PDF</span>
+    </a>
+
     <!-- Scripts -->
     <script src="data/glossaire-data.js"></script>
     <script src="js/glossaire.js"></script>
