--- a/glossaire.html
+++ b/glossaire.html
@@ -45,7 +45,7 @@
                 <a href="index.html#acte-1" class="nav-link">Notre histoire</a>
                 <a href="index.html#acte-2" class="nav-link">Nos jeux</a>
                 <a href="index.html#boutique" class="nav-link">Boutique</a>
-                <a href="glossaire.html" class="nav-link nav-link-glossaire">📚 Glossaire</a>
+                <a href="glossaire.html" class="nav-link nav-link-glossaire">Glossaire 🔍</a>
                 <a href="index.html#contact" class="nav-link">Contact</a>
             </nav>
 
@@ -71,7 +71,7 @@
         <a href="index.html#acte-1" class="nav-link">Notre histoire</a>
         <a href="index.html#acte-2" class="nav-link">Nos jeux</a>
         <a href="index.html#boutique" class="nav-link">Boutique</a>
-        <a href="glossaire.html" class="nav-link nav-link-glossaire">📚 Glossaire</a>
+        <a href="glossaire.html" class="nav-link nav-link-glossaire">Glossaire 🔍</a>
         <a href="index.html#contact" class="nav-link">Contact</a>
         <a href="index.html#boutique" class="btn-precommander-mobile">Précommander</a>
     </nav>
@@ -282,7 +282,7 @@
                         <a href="index.html#acte-1">Notre histoire</a>
                         <a href="a-propos.html">À propos</a>
                         <a href="index.html#contact">Contact</a>
-                        <a href="glossaire.html">📚 Glossaire hébreu</a>
+                        <a href="glossaire.html">Glossaire hébreu 🔍</a>
                     </nav>
                 </div>
 
