--- a/index-original.html
+++ b/index-original.html
@@ -308,7 +308,7 @@
                 <a href="#" id="nav-philosophie" class="nav-link">Philosophie</a>
                 <a href="#acte-2" data-scroll-to="acte-2">Nos jeux</a>
                 <a href="#boutique" data-scroll-to="boutique">Boutique</a>
-                <a href="glossaire.html" class="nav-link nav-link-glossaire">📚 Glossaire</a>
+                <a href="glossaire.html" class="nav-link nav-link-glossaire">Glossaire 🔍</a>
                 <a href="#contact" data-scroll-to="contact">Contact</a>
             </nav>
 
@@ -340,7 +340,7 @@
         <a href="#" id="nav-philosophie-mobile" class="nav-link">Philosophie</a>
         <a href="#acte-2" data-scroll-to="acte-2">Nos jeux</a>
         <a href="#boutique" data-scroll-to="boutique">Boutique</a>
-        <a href="glossaire.html" class="nav-link nav-link-glossaire">📚 Glossaire</a>
+        <a href="glossaire.html" class="nav-link nav-link-glossaire">Glossaire 🔍</a>
         <a href="#contact" data-scroll-to="contact">Contact</a>
         <a href="#boutique" class="btn-precommander-mobile" data-scroll-to="boutique">Précommander</a>
     </nav>
@@ -1889,7 +1889,7 @@
                         <a href="#" id="footer-histoire" class="footer-genesis-link">Notre histoire</a>
                         <a href="#" id="footer-philosophie" class="footer-genesis-link">Notre philosophie</a>
                         <a href="#contact">Contact</a>
-                        <a href="glossaire.html">📚 Glossaire hébreu</a>
+                        <a href="glossaire.html">Glossaire hébreu 🔍</a>
                     </nav>
                 </div>
 
