--- a/index-original.html
+++ b/index-original.html
@@ -1132,6 +1132,9 @@
                 <button class="btn-modal" data-action="rules" data-game="poz">
                     📋 Règles du jeu
                 </button>
+                <button class="btn-modal" data-action="arbitrage-guide" id="btn-arbitrage-guide">
+                    ⚖️ Guide d'Arbitrage
+                </button>
                 <button class="btn-modal btn-store" data-action="store">
                     🛒 Commander
                 </button>
@@ -3843,6 +3846,34 @@
         }
     });
     </script>
+
+    <!-- MODALE GUIDE D'ARBITRAGE -->
+    <div class="arbitrage-modal-overlay" id="arbitrage-modal-overlay">
+        <div class="arbitrage-modal">
+            <button class="arbitrage-modal-close" aria-label="Fermer">×</button>
+            <div class="arbitrage-modal-header">
+                <h2>⚖️ Guide d'Arbitrage - Pozta Mitzvah</h2>
+            </div>
+            <div class="arbitrage-modal-content">
+                <iframe 
+                    src="assets/PDF/tableau_correspondance_pozta_mitzvah.pdf" 
+                    width="100%" 
+                    height="70vh"
+                    style="border: none; border-radius: 8px;"
+                    title="Guide d'Arbitrage Pozta Mitzvah">
+                    <p>Votre navigateur ne peut pas afficher les PDF. 
+                    <a href="assets/PDF/tableau_correspondance_pozta_mitzvah.pdf" download>Télécharger le PDF</a></p>
+                </iframe>
+            </div>
+            <div class="arbitrage-modal-footer">
+                <a href="assets/PDF/tableau_correspondance_pozta_mitzvah.pdf" 
+                   download="Guide-Arbitrage-Pozta-Mitzvah.pdf" 
+                   class="btn-download-pdf">
+                    📥 Télécharger le PDF
+                </a>
+            </div>
+        </div>
+    </div>
 
     <!-- JavaScript pour la modale carte -->
     <script>
