--- a/index-original.html
+++ b/index-original.html
@@ -3856,9 +3856,9 @@
             </div>
             <div class="arbitrage-modal-content">
                 <iframe 
-                    src="assets/PDF/tableau_correspondance_pozta_mitzvah.pdf" 
+                    src="assets/PDF/tableau_correspondance_pozta_mitzvah.pdf#view=FitH" 
                     width="100%" 
-                    height="70vh"
+                    height="100%"
                     style="border: none; border-radius: 8px;"
                     title="Guide d'Arbitrage Pozta Mitzvah">
                     <p>Votre navigateur ne peut pas afficher les PDF. 
