image collection lumieres d israel

--- a/index-original.html
+++ b/index-original.html
@@ -979,6 +979,7 @@
                 <li><strong>Jeu 4 — Mystique & Renouveau</strong> : Kabbale et Hassidisme (à venir)</li>
             </ul>
             <p><em>Inscrivez-vous à notre newsletter pour être informé des prochaines sorties !</em></p>
+            <img src="images/collection2026.png" alt="Collection Ora Shel Torah 2026" class="modal-collection-image">
         </div>
     </div>
 
