--- a/index-original.html
+++ b/index-original.html
@@ -1031,23 +1031,23 @@
             <div id="book-carousel" style="position:relative; width:100%; text-align:center;">
                 
                 <div class="book-slide active" style="display:block;">
-                    <img src="images/avant-propos.png" alt="Avant-propos" style="max-width:100%; max-height:70vh; object-fit:contain; border-radius:6px; box-shadow:0 4px 15px rgba(0,0,0,0.2);">
+                    <img src="images/avant-propos.png" alt="Avant-propos" onclick="openBookLightbox(this.src, this.alt)" style="max-width:100%; max-height:70vh; object-fit:contain; border-radius:6px; box-shadow:0 4px 15px rgba(0,0,0,0.2); cursor:zoom-in;">
                     <p style="margin-top:0.6rem; color:#8A8070; font-size:0.85rem;">Avant-propos</p>
                 </div>
                 <div class="book-slide" style="display:none;">
-                    <img src="images/chaine_transmission.png" alt="Arbre de Transmission" style="max-width:100%; max-height:70vh; object-fit:contain; border-radius:6px; box-shadow:0 4px 15px rgba(0,0,0,0.2);">
+                    <img src="images/chaine_transmission.png" alt="Arbre de Transmission" onclick="openBookLightbox(this.src, this.alt)" style="max-width:100%; max-height:70vh; object-fit:contain; border-radius:6px; box-shadow:0 4px 15px rgba(0,0,0,0.2); cursor:zoom-in;">
                     <p style="margin-top:0.6rem; color:#8A8070; font-size:0.85rem;">Arbre de Transmission</p>
                 </div>
                 <div class="book-slide" style="display:none;">
-                    <img src="images/derniers_prophetes.png" alt="Les Derniers Prophètes" style="max-width:100%; max-height:70vh; object-fit:contain; border-radius:6px; box-shadow:0 4px 15px rgba(0,0,0,0.2);">
+                    <img src="images/derniers_prophetes.png" alt="Les Derniers Prophètes" onclick="openBookLightbox(this.src, this.alt)" style="max-width:100%; max-height:70vh; object-fit:contain; border-radius:6px; box-shadow:0 4px 15px rgba(0,0,0,0.2); cursor:zoom-in;">
                     <p style="margin-top:0.6rem; color:#8A8070; font-size:0.85rem;">Chapitre 6 — Les Derniers Prophètes</p>
                 </div>
                 <div class="book-slide" style="display:none;">
-                    <img src="images/rambam.png" alt="Maïmonide (Rambam)" style="max-width:100%; max-height:70vh; object-fit:contain; border-radius:6px; box-shadow:0 4px 15px rgba(0,0,0,0.2);">
+                    <img src="images/rambam.png" alt="Maïmonide (Rambam)" onclick="openBookLightbox(this.src, this.alt)" style="max-width:100%; max-height:70vh; object-fit:contain; border-radius:6px; box-shadow:0 4px 15px rgba(0,0,0,0.2); cursor:zoom-in;">
                     <p style="margin-top:0.6rem; color:#8A8070; font-size:0.85rem;">Chapitre 12 — Maïmonide (Rambam)</p>
                 </div>
                 <div class="book-slide" style="display:none;">
-                    <img src="images/hafets_haim.png" alt="Le Hafets Haïm" style="max-width:100%; max-height:70vh; object-fit:contain; border-radius:6px; box-shadow:0 4px 15px rgba(0,0,0,0.2);">
+                    <img src="images/hafets_haim.png" alt="Le Hafets Haïm" onclick="openBookLightbox(this.src, this.alt)" style="max-width:100%; max-height:70vh; object-fit:contain; border-radius:6px; box-shadow:0 4px 15px rgba(0,0,0,0.2); cursor:zoom-in;">
                     <p style="margin-top:0.6rem; color:#8A8070; font-size:0.85rem;">Chapitre 19 — Le 'Hafets 'Haïm</p>
                 </div>
                 
@@ -4012,7 +4012,135 @@ Merci !`;
             counter.textContent = (currentBookSlide + 1) + ' / ' + TOTAL_BOOK_SLIDES;
         }
     }
+
+    // === LIGHTBOX ZOOM POUR FEUILLETER LES PAGES ===
+    var lightboxZoomed = false;
+
+    function openBookLightbox(src, alt) {
+        var lightbox = document.getElementById('book-lightbox');
+        var img = document.getElementById('lightbox-img');
+        if (!lightbox || !img) return;
+        img.src = src;
+        img.alt = alt || 'Zoom';
+        img.style.width = '90%';
+        lightboxZoomed = false;
+        img.style.cursor = 'zoom-in';
+        lightbox.style.display = 'block';
+        document.body.style.overflow = 'hidden';
+    }
+
+    function closeBookLightbox() {
+        var lightbox = document.getElementById('book-lightbox');
+        if (lightbox) {
+            lightbox.style.display = 'none';
+        }
+        document.body.style.overflow = '';
+        lightboxZoomed = false;
+    }
+
+    document.addEventListener('DOMContentLoaded', function() {
+        var closeBtn = document.getElementById('lightbox-close');
+        if (closeBtn) {
+            closeBtn.addEventListener('click', function(e) {
+                e.stopPropagation();
+                closeBookLightbox();
+            });
+        }
+
+        var lightbox = document.getElementById('book-lightbox');
+        if (lightbox) {
+            lightbox.addEventListener('click', function(e) {
+                if (e.target === lightbox) {
+                    closeBookLightbox();
+                }
+            });
+        }
+
+        var img = document.getElementById('lightbox-img');
+        if (img) {
+            img.addEventListener('click', function(e) {
+                e.stopPropagation();
+                if (lightboxZoomed) {
+                    img.style.width = '90%';
+                    img.style.cursor = 'zoom-in';
+                    lightboxZoomed = false;
+                    if (lightbox) {
+                        lightbox.scrollTop = 0;
+                        lightbox.scrollLeft = 0;
+                    }
+                } else {
+                    img.style.width = '180%';
+                    img.style.cursor = 'zoom-out';
+                    lightboxZoomed = true;
+                }
+            });
+        }
+
+        if (lightbox) {
+            lightbox.addEventListener('wheel', function(e) {
+                if (lightbox.style.display === 'block') {
+                    e.preventDefault();
+                    var lbImg = document.getElementById('lightbox-img');
+                    if (!lbImg) return;
+                    var currentWidth = parseFloat(lbImg.style.width) || 90;
+                    if (e.deltaY < 0) {
+                        currentWidth = Math.min(currentWidth + 15, 300);
+                    } else {
+                        currentWidth = Math.max(currentWidth - 15, 50);
+                    }
+                    lbImg.style.width = currentWidth + '%';
+                    lbImg.style.cursor = currentWidth > 95 ? 'zoom-out' : 'zoom-in';
+                    lightboxZoomed = currentWidth > 95;
+                }
+            }, { passive: false });
+        }
+    });
+
+    document.addEventListener('keydown', function(e) {
+        if (e.key === 'Escape') {
+            var lightbox = document.getElementById('book-lightbox');
+            if (lightbox && lightbox.style.display === 'block') {
+                closeBookLightbox();
+            }
+        }
+    });
     </script>
+
+    <!-- LIGHTBOX ZOOM PLEIN ÉCRAN -->
+    <div id="book-lightbox" style="
+        display:none;
+        position:fixed;
+        top:0; left:0;
+        width:100%; height:100%;
+        background:rgba(0,0,0,0.92);
+        z-index:99999;
+        cursor:zoom-out;
+        overflow:auto;
+        -webkit-overflow-scrolling:touch;
+        text-align:center;
+    ">
+        <button id="lightbox-close" type="button" style="
+            position:fixed;
+            top:15px; right:20px;
+            background:rgba(212,169,74,0.9);
+            color:white;
+            border:none;
+            border-radius:50%;
+            width:44px; height:44px;
+            font-size:1.8rem;
+            cursor:pointer;
+            z-index:100000;
+            line-height:42px;
+        ">&times;</button>
+        <img id="lightbox-img" src="" alt="Zoom" style="
+            margin:20px auto;
+            display:block;
+            max-width:none;
+            width:90%;
+            transition:width 0.3s ease;
+            cursor:zoom-in;
+        ">
+    </div>
 
 </body>
 </html>
