--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
             
             <!-- En-tête de section -->
             <div class="showcase-header">
-                <h2 class="section-title">Trois jeux pour redécouvrir le judaïsme en famille</h2>
+                <h2 class="section-title">Trois chemins pour redécouvrir le judaïsme en famille</h2>
                 </div>
                 
             <!-- Slider horizontal simple -->
@@ -584,12 +584,15 @@
                     </div>
                     </div>
                     <div class="jeu-info">
-                        <h3 class="jeu-title">La Parole Transmise - Lumières d'Israël</h3>
+                        <h3 class="jeu-title">La Parole Transmise</h3>
+                        <p style="font-size:0.85rem; color:#9A9080; font-style:italic; margin-top:-0.3rem; margin-bottom:0.8rem;">
+                            Lumières d'Israël
+                        </p>
                         <p class="jeu-tagline">
                             Un livre premium sur 118 figures<br>
                             qui ont façonné 4000 ans d'histoire juive
                         </p>
-                        <a href="#lumieres-israel" class="btn-discover">Découvrir ce livre →</a>
+                        <a href="#lumieres-israel" class="btn-discover">Découvrir →</a>
                     </div>
             </div>
 
