--- a/index.html
+++ b/index.html
@@ -664,6 +664,10 @@
     <!-- HERO BIS - La Parole Transmise - Lumières d'Israël -->
     <section id="lumieres-israel" class="hero-bis hero-bis-lumieres">
         <div class="hero-bis-background">
+            <img src="images/hero_lumieres_mod.png" alt="La Parole Transmise - Lumières d'Israël - Fond" loading="lazy">
+        </div>
+        <div class="hero-bis-content">
+            <!-- Colonne gauche : livre -->
             <div class="book-flip-container">
                 <div class="book-flip-inner">
                     <div class="book-flip-front">
@@ -674,16 +678,17 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="hero-bis-content">
-            <h2>La Parole Transmise - Lumières d'Israël <span class="h2-subtitle">— Les grandes figures de l'histoire juive — Un livre premium</span></h2>
-            <p class="hero-bis-subtitle">Un livre premium pour découvrir les patriarches, prophètes et sages qui ont façonné 4000 ans d'histoire</p>
-            <div class="hero-bis-actions">
-                <button class="btn-modal btn-hero" onclick="openModal('modal-contenu-lumieres')">Découvrir le contenu</button>
-                <button class="btn-hero btn-modal" onclick="openModal('modal-carte-apercu')">Feuilleter les pages</button>
-                <button class="btn-modal btn-store" data-action="store">
-                    🛒 Commander
-                </button>
+            <!-- Colonne droite : texte + boutons -->
+            <div class="hero-bis-text-col">
+                <h2>La Parole Transmise - Lumières d'Israël <span class="h2-subtitle">— Les grandes figures de l'histoire juive — Un livre premium</span></h2>
+                <p class="hero-bis-subtitle">Un livre premium pour découvrir les patriarches, prophètes et sages qui ont façonné 4000 ans d'histoire</p>
+                <div class="hero-bis-actions">
+                    <button class="btn-modal btn-hero" onclick="openModal('modal-contenu-lumieres')">Découvrir le contenu</button>
+                    <button class="btn-hero btn-modal" onclick="openModal('modal-carte-apercu')">Feuilleter les pages</button>
+                    <button class="btn-modal btn-store" data-action="store">
+                        🛒 Commander
+                    </button>
+                </div>
             </div>
         </div>
     </section>
