ajustement titre lumieres

--- a/index.html
+++ b/index.html
@@ -667,8 +667,7 @@
             <img src="images/hero_lumieres_mod.png" alt="La Parole Transmise - Lumières d'Israël - Fond" loading="lazy">
         </div>
         <div class="hero-bis-content">
-            <h2>La Parole Transmise - Lumières d'Israël <span class="h2-subtitle">— Les grandes figures de l'histoire juive — Un livre premium</span></h2>
-            <p class="hero-bis-subtitle">Un livre premium pour découvrir les patriarches, prophètes et sages qui ont façonné 4000 ans d'histoire</p>
+            <h2>La Parole Transmise - Lumières d'Israël <span class="h2-subtitle">— Les grandes figures de l'histoire juive</span></h2>
             <div class="hero-bis-actions">
                 <button class="btn-modal btn-hero" onclick="openModal('modal-contenu-lumieres')">Découvrir le contenu</button>
                 <button class="btn-hero btn-modal" onclick="openModal('modal-carte-apercu')">Feuilleter les pages</button>
